--- a/composer.json
+++ b/composer.json
@@ -41,11 +41,15 @@
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
             "@php artisan key:generate --ansi",
-            "@php artisan storage:link"
+            "@php artisan storage:link" 
+        ],
+        
+        
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi"
+          
         ]
 
        
