--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=base64:iNQuZLV+4cUpmlun64iNkowhwyQLYtKpTBF0LuiZk/E=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+
+
+URL_SERVER_API = "https://laravelapi-production-d2df.up.railway.app/api/"
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
@@ -11,7 +15,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravels
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -57,5 +61,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+VIEW_COMPILED_PATH=storage/framework/views
 
 
